[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/CirclePlayer.gd" type="Script" id=2]
[ext_resource path="res://sprites/Untitled_8.png" type="Texture" id=3]
[ext_resource path="res://sprites/cannon.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Bullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://audio/Laser.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0312

[node name="CirclePlayer" instance=ExtResource( 1 )]
position = Vector2( -2, 0 )
script = ExtResource( 2 )
bullet = ExtResource( 5 )

[node name="Avatar" parent="." index="0"]
mode = 2

[node name="Cannon" type="Sprite" parent="Avatar" index="0"]
rotation = -6.28319
texture = ExtResource( 4 )
offset = Vector2( 0, -19 )

[node name="Sprite" type="Sprite" parent="Avatar" index="1"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Avatar" index="2"]
visible = false
shape = SubResource( 1 )

[node name="PowerRechargeTimer" type="Timer" parent="." index="1"]
wait_time = 0.4

[node name="BulletSound" type="AudioStreamPlayer2D" parent="." index="2"]
stream = ExtResource( 6 )

[connection signal="timeout" from="PowerRechargeTimer" to="." method="_on_PowerRechargeTimer_timeout"]
